# yeti-documentation

./: .gitignore  Cargo.toml  README.md  config.yaml
schemas/: passages.graphql
source/: README.md  SUMMARY.md  book.toml  build-docs.sh
source/api/: data-types.md  errors.md  graphql.md  operations.md  rest.md
source/appendix/: api-compatibility.md  benchmarks.md  migration.md
source/architecture/: overview.md  plugins.md  replication.md  security.md  storage.md  telemetry.md
source/books/: 404.html  index.html
source/books/guides/: README.md  SUMMARY.md  book.toml
source/books/guides/ai/: mcp.md
source/books/guides/auth/: attributes.md  basic.md  hooks.md  jwt.md  mtls.md  oauth.md  overview.md  rbac.md
source/books/guides/building/: custom-resources.md  defining-schemas.md  overview.md  resource-hooks.md  static-files.md  table-extenders.md
source/books/guides/caching/: full-page-cache.md  overview.md
source/books/learn/: README.md  SUMMARY.md  book.toml  studio.md  troubleshooting.md
source/books/reference/: README.md  SUMMARY.md  book.toml
source/concepts/: applications.md  extensions.md  resources.md  routing.md  schemas.md
source/contributing/: architecture-decisions.md  development-setup.md
source/deployment/: backup.md  cloud.md  monitoring.md  performance.md  production.md
source/examples/: overview.md
source/getting-started/: first-application.md  install-coming-soon.md  installation.md  quickstart.md
source/guides/: ai-inference.md  auth-attributes.md  auth-basic.md  auth-hooks.md  auth-jwt.md  auth-mtls.md  auth-oauth.md  auth-overview.md  auth-rbac.md  building-extensions.md  caching.md  crud.md  custom-resources.md  defining-schemas.md  event-subscribers.md  extension-lifecycle.md  field-selection.md  fiql.md  full-page-cache.md  graphql.md  grpc.md  mcp.md  mqtt.md  pagination.md  pubsub.md  rate-limiting.md  realtime-overview.md  redirects.md  relationships.md  resource-hooks.md  seed-data.md  sse.md  static-files.md  studio.md  table-expiration.md  telemetry.md  troubleshooting.md  vector-search.md  websocket.md
source/reference/: app-config.md  cli.md  environment-variables.md  schema-directives.md  server-config.md  tls.md
source/sdk/: extension-api.md  overview.md  request-parsing.md  resource-macros.md  resource-params.md  response-helpers.md  table-access.md  utilities.md
source/theme/: custom.css  index.hbs  tomorrow-night.css  yeti.css
source/tools/: extract_corpus.py  purge_corpus.py  test_corpus.py
src/: lib.rs
web/: 404.html  book.toml  index.html  print.html  searchindex.js  toc.html  toc.js
web/api/: data-types.html  errors.html  graphql.html  operations.html  rest.html
web/appendix/: api-compatibility.html  benchmarks.html  migration.html
web/architecture/: overview.html  plugins.html  replication.html  security.html  storage.html  telemetry.html
web/concepts/: applications.html  extensions.html  resources.html  routing.html  schemas.html
web/contributing/: architecture-decisions.html
web/deployment/: backup.html  cloud.html  monitoring.html  performance.html  production.html
web/examples/: overview.html
web/getting-started/: first-application.html  installation.html  quickstart.html
web/guides/: ai-inference.html  auth-attributes.html  auth-basic.html  auth-hooks.html  auth-jwt.html  auth-mtls.html  auth-oauth.html  auth-overview.html  auth-rbac.html  building-extensions.html  caching.html  crud.html  custom-resources.html  defining-schemas.html  event-subscribers.html  extension-lifecycle.html  field-selection.html  fiql.html  full-page-cache.html  graphql.html  grpc.html  kafka.html  mcp.html  mqtt.html  pagination.html  pubsub.html  rate-limiting.html  realtime-overview.html  redirects.html  relationships.html  resource-hooks.html  seed-data.html  sse.html  static-files.html  studio.html  table-expiration.html  telemetry.html  troubleshooting.html  vector-search.html  websocket.html
web/reference/: app-config.html  cli.html  environment-variables.html  schema-directives.html  server-config.html  tls.html
web/sdk/: extension-api.html  overview.html  request-parsing.html  resource-macros.html  resource-params.html  response-helpers.html  table-access.html  utilities.html
web/theme/: highlight.css  yeti.css
(+75 files in other folders)
