[package]
name = "documentation"
edition = "2024"
description = "Documentation"
version = "1.0.0"

[package.metadata.app]
customer_id = "yeti"
tools = ["mdbook@0.4"]
# ADR-028 docs-corpus vector pipeline. The build emits two output targets:
#   web/   — rendered HTML site (mdbook)
#   data/  — search corpus: corpus-manifest.json + sharded passage seeds
# `schemas` declares the Passage @table (auto-embed Vector index). `loaders.data`
# declares the per-page seed glob; corpus-manifest.json sits OUTSIDE the glob so
# the loader treats it as sweep input, not table records.
schemas = "schemas/passages.graphql"
loaders = { data = "data/passages/**/*.json" }
# Mount-agnostic docs build (founder-locked architecture): the rendered HTML is
# BYTE-IDENTICAL regardless of where it's served. The deployment mount is applied
# at SERVE time by the Yeti web server (the router injects `<base href="{mount}/">`
# into the served index, and the theme/landing/404 read `window.__YETI_BASE_PATH`
# at runtime), NOT baked here. `site-url` stays the fixed in-app `/documentation/`
# so the corpus canonical URLs are stable; the theme uses `path_to_root`-relative
# asset refs that resolve against the served `<base>` at any mount.
static = { path = "web", root = "/", source = "source", not_found = "404.html", build = "set -euo pipefail; for book in learn guides reference; do (cd books/$book && MDBOOK_OUTPUT__HTML__SITE_URL=\"/documentation/$book/\" mdbook build); done; mkdir -p ../web/assets; cp assets/*.svg assets/*.png ../web/assets/; cp books/index.html ../web/index.html; cp books/404.html ../web/404.html; python3 tools/extract_corpus.py --source .." }

[dependencies]
