[package]
name = "documentation"
edition = "2024"
description = "Documentation"
version = "1.0.0"

[package.metadata.app]
customer_id = "yeti"
tools = ["mdbook@0.4"]
# ADR-028 docs-corpus vector pipeline. The build emits two output targets:
#   web/   — rendered HTML site (mdbook)
#   data/  — search corpus: corpus-manifest.json + sharded passage seeds
# `schemas` declares the Passage @table (auto-embed Vector index). `loaders.data`
# declares the per-page seed glob; corpus-manifest.json sits OUTSIDE the glob so
# the loader treats it as sweep input, not table records.
schemas = "schemas/passages.graphql"
loaders = { data = "data/passages/**/*.json" }
# Mount-agnostic docs build (founder-locked architecture): the rendered HTML is
# BYTE-IDENTICAL regardless of where it's served. The deployment mount is applied
# at SERVE time by the Yeti web server (the router injects `<base href="{mount}/">`
# into the served index), NOT baked here. Because each book is served one level
# below the mount (`{mount}/{book}/`) while a single mount-root `<base>` is
# injected, `build-docs.sh` renders every book with a per-book theme whose asset
# refs are the base-relative book root `{book}/` (not page-relative
# `{{ path_to_root }}`, which 404s under the mount base). See build-docs.sh for
# the full rationale.
static = { path = "web", root = "/", source = "source", not_found = "404.html", build = "bash build-docs.sh" }

[dependencies]
